<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".features.DashboardActivity">

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/writeToFile"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtMessage"/>

    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/readFile"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnWrite"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/logout"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnRead"/>

    <TextView
        android:id="@+id/txvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout"/>


</androidx.constraintlayout.widget.ConstraintLayout>